--- a/ChuChoThue.css
+++ b/ChuChoThue.css
@@ -9,56 +9,54 @@ html, body{
 .background{
     background-color: black;
 }
-.ChuChoThue--Banner{
+.ChuChoThue__Banner{
     width: 100%;
 }
-.ChuChoThue--Container{
+.ChuChoThue__Container{
     margin-left: 4%;
     margin-right: 4%;
     margin-top: 50px;
     background-color: black;
 }
-.ChuChoThue--Title{
+.ChuChoThue__Title{
     font-family: 'Montserrat', sans-serif;
     font-size: 32px;
     text-align: center;
     font-weight: bold;
     color: white;
 }
-.ChuChoThue--Container__1{
+.ChuChoThue__Container--1{
     margin-top: 24px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
 }
-.ChuChoThue--Product{
+.ChuChoThue__Product{
     margin: 24px;
-    flex: 20%;
-    max-width: 20%;
     border-radius: 5px;
     text-align: center;
     background-color: white;
     display: flex;
     flex-direction: column;
 }
-.ChuChoThue--Container__Image{
+.ChuChoThue__Container--Image{
     margin: 16px;
     flex: 100%;
     max-width: 100%;
 }
-.ChuChoThue--Product__Image{
+.ChuChoThue__Product--Image{
     border-radius: 5px;
     object-fit: contain;
     max-width: 100%;
 }
-.ChuChoThue--Product__Title{
+.ChuChoThue__Product--Title{
     font-family: 'Montserrat', sans-serif;
     font-weight: bold;
     font-size: 20px;
     margin-bottom: 16px;
     margin-top: 16px;
 }
-.ChuChoThue--Product__Price{
+.ChuChoThue__Product--Price{
     font-family: 'Roboto', sans-serif;
     font-size: 16px;
     margin-bottom: 24px;
@@ -75,52 +73,157 @@ input[type=button]{
     border-radius: 5px;
     border: 0px;
 }
-.ChuChoThue--Product__Seemore{
+.ChuChoThue__Product--Seemore{
     font-family: 'Roboto', sans-serif;
     font-size: 20px;
     margin-top: 26px;
-    text-align: center;
     color: white;
 }
 
 /* Extra small devices (600px, phone and down) */
 @media only screen and (max-width: 600px) {
-    .ChuChoThue--Product{
+    .ChuChoThue__Container{
+        margin-left: 15px;
+        margin-right: 15px;
+    }
+    .ChuChoThue__Container--1{
+        flex-wrap: nowrap;
+        overflow-y: scroll;
+    }
+    .ChuChoThue__Container--Image{
+        margin: 8px;
+    }
+    .ChuChoThue__Product{
         flex: 100%;
-        max-width: 100%;
+        margin: 4px;
+        min-width: 50%;
     }
-    .ChuChoThue--Container{
-        margin-left: 20%;
-        margin-right: 20%;
+    .ChuChoThue__Title{
+        font-size: 18px;
     }
-    
+    .ChuChoThue__Product--Title{
+        font-size: 16px;
+    }
+    .ChuChoThue__Product--Price{
+        font-size: 14px;
+    }
+    input[type=button]{
+        width: 90px;
+        height: 40px;
+        font-size: 14px;
+    }
+    .ChuChoThue__Product--Seemore{
+        display: none;
+    }
 }
 /* Small devices (portrait tablets and large phones, 600px and up) */
 @media only screen and (min-width: 600px) {
-    .ChuChoThue--Product{
-        flex: 50%;
-        max-width: 50%;
+    .ChuChoThue__Container{
+        margin-left: 25px;
+        margin-right: 25px;
+    }
+    .ChuChoThue__Container--1{
+        flex-wrap: nowrap;
+        overflow-y: scroll;
+    }
+    .ChuChoThue__Container--Image{
+        margin: 8px;
+    }
+    .ChuChoThue__Product{
+        flex: 100%;
+        margin: 4px;
+        min-width: 33%;
+    }
+    .ChuChoThue__Title{
+        font-size: 18px;
+    }
+    .ChuChoThue__Product--Title{
+        font-size: 17px;
+    }
+    .ChuChoThue__Product--Price{
+        font-size: 16px;
+    }
+    input[type=button]{
+        width: 100px;
+        height: 44px;
+        font-size: 16px;
+    }
+    .ChuChoThue__Product--Seemore{
+        display: none;
     }
 }
 /* Medium devices (landscape tablets, 768px and up */
 @media only screen and (min-width: 768px) {
-    .ChuChoThue--Product{
-        flex: 33%;
-        max-width: 33%;
+    .ChuChoThue__Container{
+        margin-left: 30px;
+        margin-right: 30px;
+    }
+    .ChuChoThue__Container--1{
+        flex-wrap: nowrap;
+        overflow-y: scroll;
+    }
+    .ChuChoThue__Container--Image{
+        margin: 8px;
+    }
+    .ChuChoThue__Product{
+        flex: 100%;
+        margin: 8px;
+        min-width: 25%;
+    }
+    .ChuChoThue__Title{
+        font-size: 20px;
+    }
+    .ChuChoThue__Product--Title{
+        font-size: 18px;
+    }
+    .ChuChoThue__Product--Price{
+        font-size: 16px;
+    }
+    input[type=button]{
+        width: 110px;
+        height: 44px;
+        font-size: 17px;
+    }
+    .ChuChoThue__Product--Seemore{
+        display: none;
     }
 }
 /* Large devices (laptops/desktops, 992px and up */
 @media only screen and (min-width: 992px) {
-    .ChuChoThue--Product{
-        flex: 25%;
-        max-width: 25%;
+    .ChuChoThue__Container{
+        margin-left: 40px;
+        margin-right: 40px;
+    }
+    .ChuChoThue__Container--1{
+        flex-wrap: wrap;
+        overflow: auto;
+    }
+    .ChuChoThue__Container--Image{
+        margin: 12px;
+    }
+    .ChuChoThue__Product{
+        flex: 20%;
+        margin: 8px;
+        min-width: 20%;
+        max-width: 20%;
+    }
+    .ChuChoThue__Title{
+        font-size: 22px;
+    }
+    .ChuChoThue__Product--Title{
+        font-size: 19px;
+    }
+    .ChuChoThue__Product--Price{
+        font-size: 16px;
+    }
+    input[type=button]{
+        width: 110px;
+        height: 44px;
+        font-size: 18px;
     }
 }
 /* Extra large devices (Large desktops and laptops, 1200px and up) */
 @media only screen and (min-width: 1200px) {
-    .ChuChoThue--Product{
-        flex: 20%;
-        max-width: 20%;
-    }
+    
 }
 
