--- a/Style.css
+++ b/Style.css
@@ -1,3 +1,6 @@
+@import url('https://fonts.googleapis.com/css2?family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Racing+Sans+One&family=Roboto&display=swap');
 html, body{
     margin: 0;
     padding: 0;
@@ -9,7 +12,6 @@ html, body{
     background-color: #242426;
     width: 100%;
     position: fixed;
-    z-index: 1;
 }
 .Page__Header--Container .header__button{
     display: none;
@@ -18,38 +20,37 @@ html, body{
     font-family: 'Racing Sans One', cursive;
     font-weight: bold;
     color: white;
-    font-size: 22px;
+    font-size: 20px;
 }
-
+.Page__Header--Login{
+    color: white;
+    font-weight: bold;
+    font-family: 'Montserrat', sans-serif;
+    cursor: pointer;
+    font-size: 18px;
+}
 .Page__Header--Title{
     color: white;
     font-weight: bold;
     font-family: 'Montserrat', sans-serif;
     cursor: pointer;
-    font-size: 22px;
+    font-size: 20px;
 }
-
-.Page__Header--Title a:hover{
-    text-decoration: none;
+.header__button{
+    font-size: 0px;
 }
-
-.Page__Header--Title:nth-of-type(4) a{
-    color: white;
-}
-
-.Page__Header--Container a:nth-of-type(4):hover{
-    color: black;
-    background-color: white;
-}
-
 .Page__Header--Search{
     border: 1px solid black;
     border-radius: 5px;
     width: 100%;
-    padding-left: 35px;
-    font-size: 20px;
+    padding: 5px 5px 5px 35px;
+    font-size: 15px;
+    color: black;
 }
-
+.header__search{
+    margin-left: 32px;
+    margin-right: 8px;
+}
 .Page__Header--Icon2{
     color: black;
     margin-right: -30px;
@@ -73,17 +74,11 @@ html, body{
     background-color: black;
     color: white;
 }
-  
 .dropdown__content a:hover {
     background-color: black;
     color: white;
 }
-  
-.Page__Header--Ava > img{
-    cursor: pointer;
-}
-
-.Page__Header--Container a{
+.Page__Header--Container a,.Page__Header--Container div:nth-of-type(2){
   float: left;
   width: 14.3%;
   display: block;
@@ -95,19 +90,19 @@ html, body{
 .Page__Header--Container a:hover {
     background-color: white;
     color: black;
+    text-decoration: none;
 }
 .dropdown__content{
     display: none;
     position: absolute;
     background-color: white;
     min-width: 160px;
-    z-index: 2;
+    z-index: 1;
 }
 .dropdown__content a{
     float: none;
     color: black;
     padding: 12px 16px;
-    text-decoration: none;
     display: block;
     width: 100%;
     text-align: left;
@@ -115,15 +110,64 @@ html, body{
 .Page__Header--Dropdown:hover .dropdown__content{
     display: block;
 }
+.header__vertical  {
+    width: 0;
+    position: fixed;
+    z-index: 1;
+    height: 100%;
+    background-color: #242426;
+    overflow-x: hidden;
+    transition: 0.3s;
+    padding-top: 60px;
+}
+.header__vertical a {
+    padding: 8px 8px 8px 32px;
+    font-size: 18px;
+    color: white;
+    display: block;
+    text-decoration: none;
+}
+.header__vertical a:hover{
+    text-decoration: none;
+}
+.header__vertical .closebtn {
+    position: absolute;
+    top: 0;
+    right: 20px;
+    font-size: 36px;
+}
+.dropdown-btn {
+    padding: 6px 8px 6px 32px;
+    text-decoration: none;
+    font-size: 18px;
+    color: white;
+    display: block;
+    border: none;
+    background: none;
+    width: 100%;
+    text-align: left;
+    outline: none;
+}
+.dropdown-container {
+    display: none;
+    background-color: #242424;
+    padding-left: 16px;
+}
+.dropdown-container:hover(){
+    background-color: white;
+    color: black;
+    text-decoration: none;
+}
 .page__footer--container {
     display: flex;
     background-color: #242426;
     color: white;
-    max-height: 225px;
-    width: 100vw;
+    height: 100%;
+    width: 100%;
     padding: 25px 0px;
     position: relative;
     bottom: 0px;
+    flex-wrap: wrap;
 }
 
 .footer__text{
@@ -153,81 +197,43 @@ html, body{
 .bg-color{
     background-color: black;
 }
-@media only screen and (max-width: 768px) {
-    .Page__Header--Container{
-        overflow: hidden;
-    }
-    .Page__Header--Container .header__button{
-        display: none;
-    }
-    .Page__Header--Container a{
-        width: auto;
-    }
-    .Page__Header--Container a:not(:first-child), .Page__Header--Dropdown .dropdown__button {display: none;}
-    .Page__Header--Container a.header__button {
-        float: right;
-        display: block;
-    }
+@media only screen and (max-width: 600px){
     .footer__text{
-        font-size: 6px;
+        font-size: 14px;
     }
 
     .footer__header{
-        font-size: 8px;
+        font-size: 13px;
     }
 
     .footer--right img{
-        height: 15px;
+        height: 20px;
+    }
+    .footer--left {
+        flex: 50%;
+        margin-left: 30px;
+        margin-bottom: 20px;
+    }
+    
+    .footer--right {
+        flex: 50%;
+        margin-left: 30px;
     }
 }
-@media only screen and (max-width: 768px){
-    .Page__Header--Container.header--responsive {position: relative;}
-    .Page__Header--Container.header--responsive .header__button {
-        position: absolute;
-        right: 0;
-        top: 0;
-    }
-    .Page__Header--Container.header--responsive a {
-        float: none;
-        display: block;
-        text-align: left;
-    }
-    .Page__Header--Container.header--responsive .Page__Header--Dropdown {float: none;}
-    .Page__Header--Container.header--responsive .dropdown__content {position: relative;}
-    .Page__Header--Container.header--responsive .Page__Header--Dropdown .dropdown__button {
-      display: block;
-      width: 100%;
-      text-align: left;
-    }
-}
-/* Trống min-width: 600px; Do header chữ nhỏ lắm */
-@media only screen and (min-width: 768px) {
-    .Page__Header--Tach{
-        font-size: 12px;
-    }
-
-    .Page__Header--Title{
-        font-size: 12px;
-    }
-
-    .dropdown__content{
-        font-size: 12px;
-    }
-
-    .Page__Header--Search{
-        padding: 4px 4px 4px 18px;
+@media only screen and (min-width: 600px){
+    .footer__text{
         font-size: 10px;
-        width: 100%;
     }
 
-    .Page__Header--Icon2{
-        font-size: 11px;
-        margin-right: -20px;
+    .footer__header{
+        font-size: 12px;
     }
 
-    .Page__Header--Ava > img{
-        width: 30px;
+    .footer--right img{
+        height: 18px;
     }
+}
+@media only screen and (min-width: 768px){
     .footer__text{
         font-size: 12px;
     }
@@ -240,6 +246,34 @@ html, body{
         height: 20px;
     }
 }
+@media only screen and (max-width: 992px) {
+    .Page__Header--Tach{
+        font-size: 18px;
+    }
+    .header__button{
+        font-size: 18px;
+    }
+    .Page__Header--Login{
+        font-size: 16px;
+    }
+    .Page__Header--Container a{
+        width: auto;
+    }
+    .Page__Header--Container a:not(:nth-child(2)), .Page__Header--Dropdown .dropdown__button,.Page__Header--Container div:nth-of-type(2) {display: none;}
+    .Page__Header--Container a.header__button {
+        float: left;
+        display: block;
+    }
+    .Page__Header--Container a.Page__Header--Login{
+        float: right;
+        display: block;
+    }
+    .Page__Header--Container a.Page__Header--Login2{
+        float: right;
+        display: block;
+    }
+}
+/* Này thêm cái max-width 992 nha!!! Tại kích thước trở lại thì header đều nhỏ á */
 
 @media only screen and (min-width: 992px) {
     .Page__Header--Container a{
@@ -254,7 +288,7 @@ html, body{
         font-size: 16px;
     }
 
-    .dropdown__content{
+    .Page__Header--Dropdown{
         font-size: 16px;
     }
 
@@ -299,7 +333,7 @@ html, body{
         font-size: 18px;
     }
 
-    .dropdown__content{
+    .Page__Header--Dropdown{
         font-size: 18px;
     }
 
