--- a/login2.css
+++ b/login2.css
@@ -4,59 +4,69 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Roboto&display=swap');
 
 @import url('https://fonts.googleapis.com/css2?family=Montserrat&family=Racing+Sans+One&family=Roboto&display=swap');
-*
-{
-  margin:auto;
-  padding:auto;
+
+* {
+    margin: auto;
+    padding: auto;
 }
 
-body, html {
+body,
+html {
     background-size: cover;
     background-position: 100%;
     height: 100%;
     text-rendering: optimizeLegibility;
 }
-.form__container--subcribe{
-    width: 59.688%;
+
+.form__container--subcribe {
+    width: 30%;
     height: fit-content;
     background-color: white;
     border: 1px solid gray;
     font-family: 'Roboto';
 }
-.form__container{
+
+.form__container {
     display: flex;
     justify-content: center;
     height: auto;
     width: 100%;
 }
-.bold{
+
+.bold {
     font-weight: bold;
 }
-.center{
+
+.center {
     text-align: center;
 }
-.img-banner{
+
+.img-banner {
     width: 100%;
     height: auto;
     margin: 0;
     opacity: 0.7;
 }
-.right{
+
+.right {
     width: 56.632%;
     margin: 0;
-    padding: 8%;
+    padding: 5% 11%;
 }
-.right--content{
+
+.right--content {
     height: 100%;
     width: 100%;
 }
-.left{
+
+.left {
     width: 43.368%;
     height: auto;
     margin: 0;
 }
 
-input[type=text], input[type=password] {
+input[type=text],
+input[type=password] {
     width: 100%;
     padding: 10px 20px;
     margin: 1.97% 0;
@@ -64,26 +74,32 @@ input[type=text], input[type=password] {
     border: 1px solid #A7A7A7;
     box-sizing: border-box;
     border-radius: 5px;
-  }
-.d-block
-{display:block!important}
+}
 
-h2{
+.d-block {
+    display: block !important
+}
+
+h2 {
     margin-bottom: 4.423%;
     font-family: 'Montserrat';
     font-weight: 1000;
 }
-.form--label{
+
+.form--label {
     margin-bottom: 1.97%;
     font-size: 20px;
 }
-.form--label span{
+
+.form--label span {
     color: red;
 }
-input::placeholder{
+
+input::placeholder {
     font-size: 18px;
 }
-.form-group a{
+
+.form-group a {
     text-decoration: none;
     color: black;
 }
@@ -93,32 +109,43 @@ input::placeholder{
     background-color: black;
     color: white;
     margin: 2.95% auto;
-  }
+}
+
 #button--login:hover {
     opacity: 0.8;
 }
-.button{
+
+.buttonother {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+}
+
+.button {
     font-size: 20px;
     margin: 2.95% 0;
     border: none;
     cursor: pointer;
-    width: 100%;
+    width: 163px;
+    height: 44px;
     border-radius: 5px;
-    height: 50px;
     vertical-align: middle;
     text-transform: uppercase;
 }
+
 .social-button {
     box-sizing: border-box;
     cursor: pointer;
-    display: inline-block;   
+    display: inline-block;
     line-height: 50px;
     text-align: left;
     text-decoration: none;
     text-transform: uppercase;
+    width: 45%;
+    border-radius: 5px;
     margin: 2.95% auto;
     outline: rgb(255, 255, 255) none 0px;
-    padding-left: 20%;
+    padding-left: 10%;
     transition: all 0.2s cubic-bezier(0.72, 0.01, 0.56, 1) 0s;
     -webkit-transition: all .3s ease;
     -moz-transition: all .3s ease;
@@ -126,6 +153,7 @@ input::placeholder{
     -o-transition: all .3s ease;
     transition: all .3s ease;
 }
+
 #facebook-connect {
     background: rgb(255, 255, 255) url('https://raw.githubusercontent.com/eswarasai/social-login/master/img/facebook.svg?sanitize=true') no-repeat scroll 5px 0px / 30px 50px padding-box border-box;
     border: 1px solid rgb(60, 90, 154);
@@ -142,7 +170,7 @@ input::placeholder{
     text-align: center;
     border: 0px none rgb(255, 255, 255);
     outline: rgb(255, 255, 255) none 0px;
-    padding-left: 2%; 
+    padding-left: 2%;
 }
 
 #facebook-connect:hover span {
@@ -173,72 +201,116 @@ input::placeholder{
 #google-connect:hover span {
     color: #FFF;
 }
+
 /* CSS responsive */
+@media only screen and (max-width: 500px) {
+    .buttonother {
+        flex-direction: column;
+    }
+
+    .social-button {
+        
+        padding-left: 20%;
+    }
+}
+
 @media only screen and (max-width: 992px) {
+
     /* For mobile phones: */
-    .left{
+    .left {
         display: none;
     }
-    .right{
+
+    .right {
         width: 100%;
     }
-    .form__container--subcribe{
+
+    .form__container--subcribe {
         width: 100%;
         height: auto;
         background-color: white;
         border: 1px solid gray;
         font-family: 'Roboto';
     }
-    .form__container{
+
+    .form__container {
         display: flex;
         justify-content: center;
         height: auto;
         width: 100%;
     }
 
-  }
+    #button--login {
+        font-size: 16px;
+        width: 140px;
+        height: 40px;
+    }
+    .social-button {
+        box-sizing: border-box;
+        cursor: pointer;
+        display: inline-block;
+        line-height: 40px;
+        text-align: left;
+        text-decoration: none;
+        text-transform: uppercase;
+        width: 100%;
+        border-radius: 5px;
+        margin: 2% auto;
+        outline: rgb(255, 255, 255) none 0px;
+        padding-left: 20%;
+    }
+
+}
+
 /* Large devices (laptops/desktops, 992px and up) */
 @media only screen and (min-width: 992px) {
-    .left{
+    .left {
         display: none;
     }
-    .right{
+
+    .right {
         width: 100%;
     }
-    .form__container--subcribe{
+
+    .form__container--subcribe {
         width: 80%;
         height: auto;
         background-color: white;
         border: 1px solid gray;
         font-family: 'Roboto';
     }
-    .form__container{
+
+    .form__container {
         display: flex;
         justify-content: center;
         height: auto;
         width: 100%;
     }
 
-  }
-  /* Extra large devices (large laptops and desktops, 1200px and up) */
+}
+
+/* Extra large devices (large laptops and desktops, 1200px and up) */
 @media only screen and (min-width: 1440px) {
-    .right{
+    .right {
         width: 56.632%;
     }
-    .left{
+
+    .left {
         width: 43.368%;
         height: auto;
         display: block;
         background-image: url('../Images/bannerlogin.jpg.png');
     }
-    .form__container--subcribe{
+
+    .form__container--subcribe {
         width: 80%;
         height: auto;
         background-color: white;
         border: 1px solid gray;
         font-family: 'Roboto';
     }
-    .form__container{
+
+    .form__container {
         display: flex;
         justify-content: center;
         height: auto;
